Update on pom